--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[May, 2023] I will join the TPC of <a href="https://superappsec.github.io/">SaTS 2023 (Secure and Trustworthy Superapps Workshop)</a>. 
+                        This might be the first workshop on discussing security and privacy issues of mobile super apps. Welcome to submit!</li>
+                    <li>[May, 2023] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity24/call-for-papers">USENIX Security 2024</a>. Welcome to submit!</li>
                     <li>[March, 2023] I will join the TPC of <a href="https://www.ndss-symposium.org/ndss2024/submissions/call-for-papers/">NDSS 2024</a>. Welcome to submit!</li>
                     <li>[March, 2023] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Xiaohan! <br/>  
                     <li>[Jan, 2023] I will join the TPC of <a href="https://icics23.nankai.edu.cn/call_for_papers.php">ICICS 2023</a>. Welcome to submit!</li>
@@ -387,15 +390,18 @@
                         <div class="title">Remote Code Execution from SSTI in the Sandbox: Automatically Detecting and Exploiting Template Escape Bugs.</div>
                         <div class="author">Yudi Zhao, Yuan Zhang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 32nd USENIX Security Symposium (USENIX Security), Anaheim, CA, USA, August 9-11, 2023 (coming soon).
+                            <b>[AE Badges: Artifacts Functional; Results Reproduced; Artifacts Available]</b></br>
                             <a href="./paper/tefuzz-security23-TR.pdf">[Tech. Report]</a>
                             <a href="./paper/tefuzz-security23.pdf">[Paper]</a>
+                            <a href="https://github.com/seclab-fudan/TEFuzz">[Source Code]</a>
+                            
                         </div>
                     </li> 
                     <li>
                         <div class="title">Understanding the (In)Security of Cross-side Face Verification Systems in Mobile Apps: A System Perspective.</div>
                         <div class="author">Xiaohan Zhang, Haoqi Ye, Ziqi Huang, Xiao Ye, Yinzhi Cao, Yuan Zhang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 44th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 22-26, 2023.
-                            
+                            <a href="./paper/xfvschecker-oakland23.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
@@ -664,7 +670,9 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 33rd USENIX Security Symposium (USENIX Security 2024)</i>
                     <li>the 2024 Network and Distributed System Security Symposium (NDSS 2024)</i>
+                    <li>ACM Workshop on Secure and Trustworthy Superapps (SaTS 2023)</i>
                     <li>the 25th International Conference on Information and Communications Security (ICICS 2023)</i>
                     <li>the 2023 International Conference on Metaverse Computing, Networking and Applications (MetaCom 2023)</i>
                     <li>the 44th IEEE Symposium on Security and Privacy (S&P 2023)</i>
