--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@
 			</p>
             <!--p>
     			<h2><b>Yuan Zhang</b></h2>
-                <i>Associate Professor, Ph.D</i><br>
+                <i>Professor, Ph.D</i><br>
                 <i>School of Computer Science, Fudan University</i>
                 <i></i><br>
                 <small><a href="https://scholar.google.com/citations?user=ZEgzyZcAAAAJ">Google Scholar Profile</a></small>
                 <br>
 			</p-->
             <p style="font-size: 1.1rem;">
-                I am an Associate Professor in the <a href="http://www.cs.fudan.edu.cn/">School of Computer Science</a> of <a href="http://www.fudan.edu.cn/">Fudan University</a>. 
+                I am a Professor in the <a href="http://www.cs.fudan.edu.cn/">School of Computer Science</a> of <a href="http://www.fudan.edu.cn/">Fudan University</a>. 
                 I co-direct the System Software and Security Laboratory of Fudan University.
                 I am also the co-founder and the coach of a great CTF Team in Fudan University, named <a href="https://ctftime.org/team/57907">Whitzard</a>. 
                 We took part in many great world-wide CTF competitions and won good places.
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Sept, 2023] I will join the TPC of <a href="http://www.codaspy.org/2024/cfp.html">CODASPY 2024</a>. Welcome to submit!</li>
                     <li>[Aug, 2023] One paper accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>. Congrats Jiarun! <br/>  
                     <li>[Aug, 2023] Two papers accepted by <a href="https://www.sigsac.org/ccs/CCS2023/">CCS 2023</a>. Congrats Peng & Xin! <br/>  
                     <li>[May, 2023] I will join the TPC of <a href="https://superappsec.github.io/">SaTS 2023 (Secure and Trustworthy Superapps Workshop)</a>. 
@@ -377,7 +378,8 @@
             <h3><a name="background">Background</a></h3>
             <div>
                 <ul>
-                    <li>2017.12~now, Fudan University, School of Computer Science, Associate Professor</li>
+                    <li>2022.12~now, Fudan University, School of Computer Science, Professor</li>
+                    <li>2017.12~2022.11, Fudan University, School of Computer Science, Associate Professor</li>
                     <li>2014.07~2017.11, Fudan University, School of Computer Science, Assistant Professor</li>
                     <li>2009.09~2014.06, Fudan University, School of Computer Science, Ph.D</li>
                     <li>2005.09~2009.06, Nanjing University, Software Institute, B.Eng</li>
@@ -406,6 +408,13 @@
                         <div class="title">NestFuzz: Enhancing Fuzzing with Comprehensive Understanding of Input Processing Logic.</div>
                         <div class="author">Peng Deng, Zhemin Yang, Lei Zhang, Guangliang Yang, Wenzheng Hong, Yuan Zhang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 30th ACM Conference on Computer and Communications Security (CCS), Copenhagen, Denmark, November 26-30, 2023.
+                            
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title">TrustedDomain Compromise Attack in App-in-app Ecosystems.</div>
+                        <div class="author">Zhibo Zhang, Zhangyue Zhang, Keke Lian, Guangliang Yang, Lei Zhang, Yuan Zhang, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 1st ACM Workshop on Secure and Trustworthy Superapps (SaTS), co-located with ACM CCS, Copenhagen, Denmark, November 26, 2023.
                             
                         </div>
                     </li>
@@ -695,6 +704,7 @@
                 <ul>
                     <li>the 33rd USENIX Security Symposium (USENIX Security 2024)</i>
                     <li>the 2024 Network and Distributed System Security Symposium (NDSS 2024)</i>
+                    <li>the 14th ACM Conference on Data and Application Security and Privacy (CODASPY 2024)</i>
                     <li>ACM Workshop on Secure and Trustworthy Superapps (SaTS 2023)</i>
                     <li>the 25th International Conference on Information and Communications Security (ICICS 2023)</i>
                     <li>the 2023 International Conference on Metaverse Computing, Networking and Applications (MetaCom 2023)</i>
