--- a/index.html
+++ b/index.html
@@ -403,6 +403,13 @@
                         </div>
                     </li>
                     <li>
+                        <div class="title">How Well Industry-Level Cause Bisection Works in Real-World: A Study on Linux Kernel.</div>
+                        <div class="author">Kangzheng Gu, Yuan Zhang, Jiajun Cao, Xin Tan, Min Yang.</div>
+                        <div class="venue">In Proceedings of ACM International Conference on the Foundations of Software Engineering (FSE) Industry Track, Brazil, Brazil, July 15-19, 2024.
+                            <a href="">[Paper]</a>
+                        </div>
+                    </li>
+                    <li>
                         <div class="title">Efficient Detection of Java Deserialization Gadget Chains via Bottom-up Gadget Search and Dataflow-aided Payload Construction.</div>
                         <div class="author">Bofei Chen, Lei Zhang, Xinyou Huang, Yinzhi Cao, Keke Lian, Yuan Zhang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 45th IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 20-23, 2024.
@@ -708,7 +715,7 @@
             <div>Undergraduate level:<br>
                 <ul>
                     <li> Principles of Reverse Engineering <i>(in School of Computer Science)</i>
-                        <ul><li><i>Spring 2023, Spring 2022, Spring 2021, Spring 2020, Spring 2019, Spring 2018</i></li></ul>
+                        <ul><li><i>Spring 2024, Spring 2023, Spring 2022, Spring 2021, Spring 2020, Spring 2019, Spring 2018</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
                         <ul><li><i>Fall 2023, Fall 2022, Fall 2021, Fall 2020, Fall 2019, Fall 2018, Fall 2017, Fall 2016, </i></li></ul>
@@ -722,7 +729,7 @@
             <div>Graduate level:<br>
                 <ul>
                     <li> Emerging Attack & Defense Techniques <i>(in School of Software)</i>
-                        <ul><li><i>Spring 2023, Spring 2022, Spring 2021, Spring 2020, Spring 2019</i></li></ul>
+                        <ul><li><i>Spring 2024, Spring 2023, Spring 2022, Spring 2021, Spring 2020, Spring 2019</i></li></ul>
                     </li>
                     <li> Computer Network Security <i>(in School of Software)</i>
                         <ul><li><i>Spring 2018, Spring 2017, Spring 2016</i></li></ul>
@@ -738,6 +745,13 @@
                     <li>Session Chair for AsiaCCS 2021</i>
                     <li>Session Chair for NDSS 2021 (AP Replay Session)</i>
                     <li>Organization/Technical Commitee Member of InForSec</i>
+                </ul>
+            </div>
+            <div>Editorial Board:<br>
+                <ul>
+                    <li><a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy</a> (TOPS), 2024-now</li>
+                    <li><a href="https://www.editorialmanager.com/emse/Default.aspx">Empirical Software Engineering</a> (EMSE), 2021-now</li>
+                    <li>Journal of Software (<i>Special Issue: System Software Security Track, in Chinese</i>), 2021</li>
                 </ul>
             </div>
             <div>Technical Program Committee:<br>
@@ -767,12 +781,7 @@
                     <li>the 25th European Symposium on Research in Computer Security (ESORICS 2020)</i>
                 </ul>
             </div>
-            <div>Editorial Board:<br>
-                <ul>
-                    <li><a href="https://www.springer.com/journal/10664">Empirical Software Engineering</a> (EMSE), 2021-now</li>
-                    <li>Journal of Software (<i>Special Issue: System Software Security Track, in Chinese</i>), 2021</li>
-                </ul>
-            <div>Journal Reviewer:<br>
+            <!-- <div>Journal Reviewer:<br>
                 <ul>
                     <li>IEEE Transactions on Software Engineering (TSE) 2023</li>
                     <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019, 2021, 2022</li>
@@ -786,7 +795,7 @@
                     <li>SCIENCE CHINA Information Sciences 2016</li>
                     <li>IEEE Transactions on Information Forensics and Security (TIFS) 2015</li>
                 </ul>
-            </div>
+            </div> -->
             <!--div>Sub-reviewer:<br>
                 <ul>
                     <li>CCS 2018, 2019</li>
