--- a/index.html
+++ b/index.html
@@ -309,19 +309,22 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
-                    <li>[Jan, 2024] Two papers accepted by <a href="https://www2024.thewebconf.org/">WWW 2024</a>. Congrats Guoyi & Youkun! <br/>  
-                    <li>[Jan, 2024] One paper accepted by <a href="https://conf.researchr.org/home/fse-2024">FSE 2024</a>. Congrats Keke! <br/>  
+                    <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
+                    <li>[April, 2024] Invited to join the Editorial Board of <a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy (TOPS).</a> Welcome to submit!</li>
+                    <li>[April, 2024] One paper accepted by <a href="https://2024.esec-fse.org/track/fse-2024-industry">FSE 2024 (Industry)</a>. Congrats Kangzheng! <br/>  </li>
+                    <li>[Jan, 2024] Two papers accepted by <a href="https://www2024.thewebconf.org/">WWW 2024</a>. Congrats Guoyi & Youkun! <br/>  </li>
+                    <li>[Jan, 2024] One paper accepted by <a href="https://conf.researchr.org/home/fse-2024">FSE 2024</a>. Congrats Keke! <br/>  </li>
                     <li>[Dec, 2023] I will join the TPC of <a href="https://www.sigsac.org/ccs/CCS2024/home.html">ACM CCS 2024</a>. Welcome to submit!</li>
-                    <li>[Dec, 2023] One paper accepted by <a href="https://sp2024.ieee-security.org/">IEEE S&P 2024</a>. Congrats Bofei! <br/>  
-                    <li>[Dec, 2023] One paper accepted by <a href="https://infocom2024.ieee-infocom.org/">INFOCOMM 2024</a>. Congrats Kaizheng! <br/>  
+                    <li>[Dec, 2023] One paper accepted by <a href="https://sp2024.ieee-security.org/">IEEE S&P 2024</a>. Congrats Bofei! <br/>  </li>
+                    <li>[Dec, 2023] One paper accepted by <a href="https://infocom2024.ieee-infocom.org/">INFOCOMM 2024</a>. Congrats Kaizheng! <br/>  </li>
                     <li>[Sept, 2023] I will join the TPC of <a href="http://www.codaspy.org/2024/cfp.html">CODASPY 2024</a>. Welcome to submit!</li>
-                    <li>[Aug, 2023] One paper accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>. Congrats Jiarun! <br/>  
-                    <li>[Aug, 2023] Two papers accepted by <a href="https://www.sigsac.org/ccs/CCS2023/">CCS 2023</a>. Congrats Peng & Xin! <br/>  
+                    <li>[Aug, 2023] One paper accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>. Congrats Jiarun! <br/>  </li>
+                    <li>[Aug, 2023] Two papers accepted by <a href="https://www.sigsac.org/ccs/CCS2023/">CCS 2023</a>. Congrats Peng & Xin! <br/>  </li>
                     <li>[May, 2023] I will join the TPC of <a href="https://superappsec.github.io/">SaTS 2023 (Secure and Trustworthy Superapps Workshop)</a>. 
                         This might be the first workshop on discussing security and privacy issues of mobile super apps. Welcome to submit!</li>
                     <li>[May, 2023] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity24/call-for-papers">USENIX Security 2024</a>. Welcome to submit!</li>
-                    <li>[March, 2023] I will join the TPC of <a href="https://www.ndss-symposium.org/ndss2024/submissions/call-for-papers/">NDSS 2024</a>. Welcome to submit!</li>
-                    <li>[March, 2023] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Xiaohan! <br/>  
+                    <!-- <li>[March, 2023] I will join the TPC of <a href="https://www.ndss-symposium.org/ndss2024/submissions/call-for-papers/">NDSS 2024</a>. Welcome to submit!</li>
+                    <li>[March, 2023] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Xiaohan! <br/>   -->
                     <!-- <li>[Jan, 2023] I will join the TPC of <a href="https://icics23.nankai.edu.cn/call_for_papers.php">ICICS 2023</a>. Welcome to submit!</li>
                     <li>[Dec, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity23/">USENIX Security 2023</a>. Congrats altman! <br/>  
                     <li>[Oct, 2022] I will join the TPC of <a href="https://www.ieee-metacom.org/2023/cf-papers.php">IEEE MetaCom 2023</a>. Welcome to submit!</li>
@@ -395,6 +398,13 @@
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
                 <ol>
+                    <li>
+                        <div class="title">Accurate and Efficient Recurring Vulnerability Detection for IoT Firmware. </div>
+                        <div class="author">Haoyu Xiao, Yuan Zhang, Minghang Shen, Chaoyang Lin, Can Zhang, Shengli Liu, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 31st ACM Conference on Computer and Communications Security (CCS), Salt Lake City, USA, October 14-18, 2024. 
+                            <a href="">[Paper]</a>
+                        </div>
+                    </li>
                     <li>
                         <div class="title">Component Security Ten Years Later: An Empirical Study of Cross-Layer Threats in Real-World Mobile Applications.</div>
                         <div class="author">Keke Lian, Lei Zhang, Guangliang Yang, Shuo Mao, Xinjie Wang, Yuan Zhang, Min Yang.</div>
