--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         margin-bottom: 10px;
     }
 
+    .award {
+        color: red;
+    }
+
     #pub {
         font-family: helvetica;
     }
@@ -309,6 +313,8 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[June, 2024] Our FSE paper on Android Component Security received the <span class="award">ACM SIGSOFT Distinguished Paper Award</span>!</a> Congrats Keke! <br/>  
+                    <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>  
                     <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
                     <li>[April, 2024] Invited to join the Editorial Board of <a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy (TOPS).</a> Welcome to submit!</li>
                     <li>[April, 2024] One paper accepted by <a href="https://2024.esec-fse.org/track/fse-2024-industry">FSE 2024 (Industry)</a>. Congrats Kangzheng! <br/>  </li>
@@ -320,10 +326,10 @@
                     <li>[Sept, 2023] I will join the TPC of <a href="http://www.codaspy.org/2024/cfp.html">CODASPY 2024</a>. Welcome to submit!</li>
                     <li>[Aug, 2023] One paper accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>. Congrats Jiarun! <br/>  </li>
                     <li>[Aug, 2023] Two papers accepted by <a href="https://www.sigsac.org/ccs/CCS2023/">CCS 2023</a>. Congrats Peng & Xin! <br/>  </li>
-                    <li>[May, 2023] I will join the TPC of <a href="https://superappsec.github.io/">SaTS 2023 (Secure and Trustworthy Superapps Workshop)</a>. 
+                    <!-- <li>[May, 2023] I will join the TPC of <a href="https://superappsec.github.io/">SaTS 2023 (Secure and Trustworthy Superapps Workshop)</a>. 
                         This might be the first workshop on discussing security and privacy issues of mobile super apps. Welcome to submit!</li>
                     <li>[May, 2023] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity24/call-for-papers">USENIX Security 2024</a>. Welcome to submit!</li>
-                    <!-- <li>[March, 2023] I will join the TPC of <a href="https://www.ndss-symposium.org/ndss2024/submissions/call-for-papers/">NDSS 2024</a>. Welcome to submit!</li>
+                    <li>[March, 2023] I will join the TPC of <a href="https://www.ndss-symposium.org/ndss2024/submissions/call-for-papers/">NDSS 2024</a>. Welcome to submit!</li> 
                     <li>[March, 2023] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2023/">IEEE S&P 2023</a>. Congrats Xiaohan! <br/>   -->
                     <!-- <li>[Jan, 2023] I will join the TPC of <a href="https://icics23.nankai.edu.cn/call_for_papers.php">ICICS 2023</a>. Welcome to submit!</li>
                     <li>[Dec, 2022] One paper accepted by <a href="https://usenix.org/conference/usenixsecurity23/">USENIX Security 2023</a>. Congrats altman! <br/>  
@@ -402,13 +408,20 @@
                         <div class="title">Accurate and Efficient Recurring Vulnerability Detection for IoT Firmware. </div>
                         <div class="author">Haoyu Xiao, Yuan Zhang, Minghang Shen, Chaoyang Lin, Can Zhang, Shengli Liu, Min Yang. </div>
                         <div class="venue">In Proceedings of the 31st ACM Conference on Computer and Communications Security (CCS), Salt Lake City, USA, October 14-18, 2024. 
-                            <a href="">[Paper]</a>
+                            (coming soon)
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title">New PHP Language Features Make Your Static Code Analysis Tools Miss Vulnerabilities. </div>
+                        <div class="author">Lin Wang, Yuan Zhang, Xin Tan, Shengke Ye and Min Yang. </div>
+                        <div class="venue">In Proceedings of 40th International Conference on Software Maintenance and Evolution (ICSME), Flagstaff, AZ, USA, October 6-11, 2024 
+                            (coming soon)
                         </div>
                     </li>
                     <li>
                         <div class="title">Component Security Ten Years Later: An Empirical Study of Cross-Layer Threats in Real-World Mobile Applications.</div>
                         <div class="author">Keke Lian, Lei Zhang, Guangliang Yang, Shuo Mao, Xinjie Wang, Yuan Zhang, Min Yang.</div>
-                        <div class="venue">In Proceedings of ACM International Conference on the Foundations of Software Engineering (FSE), Brazil, Brazil, July 15-19, 2024.
+                        <div class="venue">In Proceedings of ACM International Conference on the Foundations of Software Engineering (FSE), Brazil, Brazil, July 15-19, 2024. <b class="award">[ACM SIGSOFT Distinguished Paper Award]</b>
                             <a href="./paper/cldroid-fse24.pdf">[Paper]</a>
                         </div>
                     </li>
@@ -416,7 +429,7 @@
                         <div class="title">How Well Industry-Level Cause Bisection Works in Real-World: A Study on Linux Kernel.</div>
                         <div class="author">Kangzheng Gu, Yuan Zhang, Jiajun Cao, Xin Tan, Min Yang.</div>
                         <div class="venue">In Proceedings of ACM International Conference on the Foundations of Software Engineering (FSE) Industry Track, Brazil, Brazil, July 15-19, 2024.
-                            <a href="">[Paper]</a>
+                            (coming soon)
                         </div>
                     </li>
                     <li>
@@ -510,7 +523,7 @@
                     <li>
                         <div class="title">Identity Confusion in WebView-based Mobile App-in-app Ecosystems.</div>
                         <div class="author">Lei Zhang, Zhibo Zhang, Ancong Liu, Yinzhi Cao, Xiaohan Zhang, Yanjun Chen, Yuan Zhang, Guangliang Yang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022. <b>[Distinguished Paper Award]</b>
+                        <div class="venue">In Proceedings of the 31st USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 10-12, 2022. <b class="award">[Distinguished Paper Award]</b>
                             <a href="./paper/miniapp-identity-security22.pdf">[Paper]</a>
                         </div>
                     </li>
@@ -572,7 +585,7 @@
                     <li>
                         <div class="title">Enhancing State-of-the-art Classifiers with API Semantics to Detect Evolved Android Malware.</div>
                         <div class="author">Xiaohan Zhang, Yuan Zhang, Ming Zhong, Daizong Ding, Yinzhi Cao, Yukun Zhang, Mi Zhang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security (CCS), Orlando, USA, November 9-13, 2020. <b>[Distinguished Paper Award Nomination]</b>
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security (CCS), Orlando, USA, November 9-13, 2020. <b class="award">[Distinguished Paper Award Nomination]</b>
                             <a href="./paper/apigraph-ccs20.pdf">[Paper]</a>
                         </div>
                     </li>               
