--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
                     <li>[June, 2024] Our FSE paper on Android Component Security received the <span class="award">ACM SIGSOFT Distinguished Paper Award</span>!</a> Congrats Keke! <br/>  
                     <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>  
                     <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
+                    <li>[May, 2024] Invited to join the Editorial Board of <a href="https://cybersecurity.springeropen.com/">Cybersecurity.</a> Welcome to submit!</li>
                     <li>[April, 2024] Invited to join the Editorial Board of <a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy (TOPS).</a> Welcome to submit!</li>
                     <li>[April, 2024] One paper accepted by <a href="https://2024.esec-fse.org/track/fse-2024-industry">FSE 2024 (Industry)</a>. Congrats Kangzheng! <br/>  </li>
                     <li>[Jan, 2024] Two papers accepted by <a href="https://www2024.thewebconf.org/">WWW 2024</a>. Congrats Guoyi & Youkun! <br/>  </li>
@@ -773,6 +774,7 @@
             <div>Editorial Board:<br>
                 <ul>
                     <li><a href="https://mc.manuscriptcentral.com/tops">ACM Transactions on Security and Privacy</a> (TOPS), 2024-now</li>
+                    <li><a href="https://cybersecurity.springeropen.com/">Cybersecurity</a>, 2024-now</li>
                     <li><a href="https://www.editorialmanager.com/emse/Default.aspx">Empirical Software Engineering</a> (EMSE), 2021-now</li>
                     <li>Journal of Software (<i>Special Issue: System Software Security Track, in Chinese</i>), 2021</li>
                 </ul>
