--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[July, 2024] One paper accepted by <a href="https://2024.issta.org/">ISSTA 2024</a>. Congrats Zhongrui! <br/>  
                     <li>[June, 2024] Our FSE paper on Android Component Security received the <span class="award">ACM SIGSOFT Distinguished Paper Award</span>!</a> Congrats Keke! <br/>  
                     <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>  
                     <li>[May, 2024] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2024/">CCS 2024</a>. Congrats Haoyu! <br/>  
@@ -416,6 +417,13 @@
                         <div class="title">New PHP Language Features Make Your Static Code Analysis Tools Miss Vulnerabilities. </div>
                         <div class="author">Lin Wang, Yuan Zhang, Xin Tan, Shengke Ye and Min Yang. </div>
                         <div class="venue">In Proceedings of 40th International Conference on Software Maintenance and Evolution (ICSME), Flagstaff, AZ, USA, October 6-11, 2024 
+                            (coming soon)
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title">VioHawk: Detecting Traffic Violations of Autonomous Driving  Systems through Criticality-guided Simulation Testing. </div>
+                        <div class="author">Zhongrui Li, Jiarun Dai, Zongan Huang, Nianhao You, Yuan Zhang, Min Yang. </div>
+                        <div class="venue">In Proceedings of ACM SIGSOFT International Symposium on Software Testing and Analysis (ISSTA), Vienna, Austria, September 16-20, 2024. 
                             (coming soon)
                         </div>
                     </li>
