--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@
                         <div class="title">Accurate and Efficient Recurring Vulnerability Detection for IoT Firmware. </div>
                         <div class="author">Haoyu Xiao, Yuan Zhang, Minghang Shen, Chaoyang Lin, Can Zhang, Shengli Liu, Min Yang. </div>
                         <div class="venue">In Proceedings of the 31st ACM Conference on Computer and Communications Security (CCS), Salt Lake City, USA, October 14-18, 2024. 
-                            (coming soon)
+                            <a href="./paper/frimrec-ccs24-full.pdf">[Full Version]</a>
+                            <a href="./paper/frimrec-ccs24.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
@@ -438,7 +439,7 @@
                         <div class="title">How Well Industry-Level Cause Bisection Works in Real-World: A Study on Linux Kernel.</div>
                         <div class="author">Kangzheng Gu, Yuan Zhang, Jiajun Cao, Xin Tan, Min Yang.</div>
                         <div class="venue">In Proceedings of ACM International Conference on the Foundations of Software Engineering (FSE) Industry Track, Brazil, Brazil, July 15-19, 2024.
-                            (coming soon)
+                            <a href="./paper/syzbotstudy-fsecomp24industry.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
