--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/atc25/call-for-papers">USENIX ATC 2025</a>. Welcome to submit!</li>
+                    <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity25/call-for-papers">USENIX Security 2025</a>. Welcome to submit!</li>
                     <li>[July, 2024] One paper accepted by <a href="https://2024.issta.org/">ISSTA 2024</a>. Congrats Zhongrui! <br/>  
                     <li>[June, 2024] Our FSE paper on Android Component Security received the <span class="award">ACM SIGSOFT Distinguished Paper Award</span>!</a> Congrats Keke! <br/>  
                     <li>[June, 2024] One paper accepted by <a href="https://conf.researchr.org/home/icsme-2024/">ICSME 2024</a>. Congrats Lin! <br/>  
@@ -790,6 +792,8 @@
             </div>
             <div>Technical Program Committee:<br>
                 <ul>
+                    <li>the 34th USENIX Security Symposium (USENIX Security 2025)</i>
+                    <li>the 2025 USENIX Annual Technical Conference (USENIX ATC 2025)</i>
                     <li>the 31th ACM Conference on Computer and Communications Security (ACM CCS 2024)</i>
                     <li>the 33rd USENIX Security Symposium (USENIX Security 2024)</i>
                     <li>the 2024 Network and Distributed System Security Symposium (NDSS 2024)</i>
