--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
+                    <li>[Aug, 2024] One paper accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024 (Industry)</a>. Congrats Shiyan! <br/>  
                     <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/atc25/call-for-papers">USENIX ATC 2025</a>. Welcome to submit!</li>
                     <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity25/call-for-papers">USENIX Security 2025</a>. Welcome to submit!</li>
                     <li>[July, 2024] One paper accepted by <a href="https://2024.issta.org/">ISSTA 2024</a>. Congrats Zhongrui! <br/>  
@@ -409,6 +411,13 @@
             <div id="pub">
                 <ol>
                     <li>
+                        <div class="title">Misdirection of Trust: Demystifying the Abuse of Dedicated URL Shortening Service. </div>
+                        <div class="author">Zhibo Zhang, Lei Zhang, Zhangyue Zhang, Geng Hong, Yuan Zhang, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 32nd Network and Distributed System Security Symposium (NDSS), San Diego, CA, USA, Feb 23-28, 2025
+                            (coming soon)
+                        </div>
+                    </li>
+                    <li>
                         <div class="title">Accurate and Efficient Recurring Vulnerability Detection for IoT Firmware. </div>
                         <div class="author">Haoyu Xiao, Yuan Zhang, Minghang Shen, Chaoyang Lin, Can Zhang, Shengli Liu, Min Yang. </div>
                         <div class="venue">In Proceedings of the 31st ACM Conference on Computer and Communications Security (CCS), Salt Lake City, USA, October 14-18, 2024. 
@@ -417,17 +426,24 @@
                         </div>
                     </li>
                     <li>
+                        <div class="title">Applying Fuzz Driver Generation to Native C/C++ Libraries of OEM Android Framework: Obstacles and Solutions. </div>
+                        <div class="author">Shiyan Peng, Yuan Zhang, Jiarun Dai, Yue Gu, Zhuoxiang Shen, Jingcheng Liu, Lin Wang, Yong Chen, Yu Qin, Lei Ai, Xianfeng Lu, Min Yang. </div>
+                        <div class="venue">In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering (ASE Industry Track), Sacramento, CA, USA, Oct 27-Nov 1, 2024
+                            (coming soon)
+                        </div>
+                    </li>
+                    <li>
                         <div class="title">New PHP Language Features Make Your Static Code Analysis Tools Miss Vulnerabilities. </div>
                         <div class="author">Lin Wang, Yuan Zhang, Xin Tan, Shengke Ye and Min Yang. </div>
                         <div class="venue">In Proceedings of 40th International Conference on Software Maintenance and Evolution (ICSME), Flagstaff, AZ, USA, October 6-11, 2024 
-                            (coming soon)
+                            <a href="./paper/PHPLangFeature-icsme24.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">VioHawk: Detecting Traffic Violations of Autonomous Driving  Systems through Criticality-guided Simulation Testing. </div>
                         <div class="author">Zhongrui Li, Jiarun Dai, Zongan Huang, Nianhao You, Yuan Zhang, Min Yang. </div>
                         <div class="venue">In Proceedings of ACM SIGSOFT International Symposium on Software Testing and Analysis (ISSTA), Vienna, Austria, September 16-20, 2024. 
-                            (coming soon)
+                            <a href="./paper/VioHawk-issta24.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
