--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Sept, 2024] Two papers accepted by <a href="https://sp2025.ieee-security.org/">IEEE S&P 2025</a>. Congrats Fengyu & Yue! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://www.ndss-symposium.org/ndss2025/">NDSS 2025</a>. Congrats Zhibo! <br/>  
                     <li>[Aug, 2024] One paper accepted by <a href="https://conf.researchr.org/home/ase-2024">ASE 2024 (Industry)</a>. Congrats Shiyan! <br/>  
                     <li>[July, 2024] Invited to join the TPC of <a href="https://www.usenix.org/conference/atc25/call-for-papers">USENIX ATC 2025</a>. Welcome to submit!</li>
@@ -329,9 +330,9 @@
                     <li>[Dec, 2023] I will join the TPC of <a href="https://www.sigsac.org/ccs/CCS2024/home.html">ACM CCS 2024</a>. Welcome to submit!</li>
                     <li>[Dec, 2023] One paper accepted by <a href="https://sp2024.ieee-security.org/">IEEE S&P 2024</a>. Congrats Bofei! <br/>  </li>
                     <li>[Dec, 2023] One paper accepted by <a href="https://infocom2024.ieee-infocom.org/">INFOCOMM 2024</a>. Congrats Kaizheng! <br/>  </li>
-                    <li>[Sept, 2023] I will join the TPC of <a href="http://www.codaspy.org/2024/cfp.html">CODASPY 2024</a>. Welcome to submit!</li>
+                    <!-- <li>[Sept, 2023] I will join the TPC of <a href="http://www.codaspy.org/2024/cfp.html">CODASPY 2024</a>. Welcome to submit!</li>
                     <li>[Aug, 2023] One paper accepted by <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>. Congrats Jiarun! <br/>  </li>
-                    <li>[Aug, 2023] Two papers accepted by <a href="https://www.sigsac.org/ccs/CCS2023/">CCS 2023</a>. Congrats Peng & Xin! <br/>  </li>
+                    <li>[Aug, 2023] Two papers accepted by <a href="https://www.sigsac.org/ccs/CCS2023/">CCS 2023</a>. Congrats Peng & Xin! <br/>  </li> -->
                     <!-- <li>[May, 2023] I will join the TPC of <a href="https://superappsec.github.io/">SaTS 2023 (Secure and Trustworthy Superapps Workshop)</a>. 
                         This might be the first workshop on discussing security and privacy issues of mobile super apps. Welcome to submit!</li>
                     <li>[May, 2023] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity24/call-for-papers">USENIX Security 2024</a>. Welcome to submit!</li>
